# MultiAgent

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
EduBench/: .gitattributes  README.md
TutorEval/: README.md
configs/: datasets.example.yaml  models.example.yaml  system.example.yaml  system.experiments.qwen27b.yaml  system.experiments.qwen4b.yaml  system.experiments.yaml
docs/: ANALYSIS.md  DATASET_SUPPORT.md  EDU_SWARM_ARCHITECTURE.md  EXPERIMENTS.md  SOURCE_MAPPING.md  VALIDATION.md  architecture-figure-tools.md
examples/: demo_inprocess.py
latex_tables_metrics_/: README.md  frozen_metrics_derived.tsv  frozen_metrics_snapshot.jsonl  frozen_metrics_snapshot.tsv  smc2026_figures.tex  smc2026_full_section.aux  smc2026_full_section.tex  smc2026_narrative_and_methodology.tex  smc2026_tables.tex
scripts/: audit_paper_runs.py  build_dashboard_data.py  build_index.py  check_llm_endpoint.py  compute_paired_stats.py  demo_local_endpoints.py  export_human_eval_pack.py  inspect_models.py  launch_parallel_sessions.sh  make_edubench_subset.py  nginx-safe-update.sh  prepare_datasets.py  rescore_results.py  run_ablation_session.py  run_benchmark.py  run_dashboard_live.sh  run_eval_session.py  run_session_with_retry.sh  run_threshold_sweep.py  run_web_server.py  run_web_server.sh  sync_hf_datasets.py  sync_web_to_public_server.sh  train_reranker.py  train_router.py
tests/: conftest.py  test_dataset_registry_ext.py  test_hybrid_index_ext.py  test_ids.py  test_inprocess_runner.py  test_llm_specialist_agents.py  test_metrics_ext.py  (+8 more)
(+57 files in other folders)
