[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eduagentic-swarm"
version = "0.2.0"
description = "Educational multi-agent orchestration framework built on top of a Python agent-swarm runtime port."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI ChatGPT" }
]
license = { text = "For research and evaluation use" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent"
]
dependencies = [
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "PyYAML>=6.0",
  "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
benchmarks = [
  "datasets>=2.19.0",
  "Pillow>=10.0.0",
]

test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
